--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo "Initializing environment and fetching CodeArtifact token"
-      - export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain project-nextwork --domain-owner 593793041923 --region eu-north-1 --query authorizationToken --output text)
+      - export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain devops-cicd --domain-owner 593793041923 --region eu-north-1 --query authorizationToken --output text)
       - echo "Token: ${CODEARTIFACT_AUTH_TOKEN}"
       - echo "Retrieved token for CodeArtifact"
 
